# chat-with-pdf-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  prompts.py  pyproject.toml  requirements.txt
src/: app.py  chatbot.py  config.py  factories.py  processing.py  prompts.py  session_manager.py  vectorstore.py
src/services/: auth_service.py  file_service.py  session_service.py
src/ui/: chat.py  sidebar.py
src/utils/: state_manager.py
streamlit/: app.py  chatbot.py  config.py  processing.py  prompts.py  vectorstore.py
ui/: app.py
