[project]
name = "chat-with-pdf-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.21",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-openai>=0.3.33",
    "openai>=1.107.2",
    "pydantic-ai>=1.0.6",
    "pymupdf4llm>=0.0.27",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "streamlit>=1.49.1",
    "streamlit-local-storage>=0.0.25",
]
